Changelog
=========

1.0 (released)
------------------



1.1 - 2012-03-29
------------------
- Adição do TinyMCE no campo de Pensamentos do Vindula
- Alteração do evento de paginação do portlet aniversariosReload



1.1 - 2012-04-24
-----------------
- Definindo um selected no Portlet Busca de Ramais, caso esteja dentro de uma Estrutura Organizacional.

1.1 - 2012-04-24
-----------------
- Ajuste do portlet ramais para departamentos em ordem alfabetica


1.1 - 2012-05-18
-----------------
- Criação de mecanismo para cortar a imagem do perfil do usuario


1.1.5 - 2012-05-24
-----------------
- Ajustes no mecanismo para cortar a imagem para imagens grandes