@@ -1,0 +1,51 @@
+<html>
+	<head>
+		<script type="text/javascript" 
+    				tal:attributes="src string:${context/portal_url}/jquery.js"></script>
+    				
+		<script type="text/javascript" 
+    				tal:attributes="src string:${view/static}/cropper/js/jquery.Jcrop.js"></script>
+    				
+		<link type="text/css" charset="utf-8" rel="stylesheet" 
+					  tal:attributes="href string:${view/static}/cropper/css/jquery.Jcrop.css"/>
+				
+		<link rel="stylesheet" href="/public.css" />
+		<link rel="stylesheet" href="/columns.css" />
+		<link rel="stylesheet" href="/++resource++vindula.themedefault/css/vindula_theme.css" />
+		<link rel="stylesheet" href="/++resource++vindula.themedefault/css/geral.css" />
+ 		<link rel="stylesheet" href="/++resource++vindula.themedefault/css/cont_pagina.css" />
+ 		<link rel="stylesheet" href="/++resource++vindula.themedefault/css/topo_nav.css" />
+ 		<link rel="stylesheet" href="/++resource++vindula.themedefault/css/titulos.css" />
+ 		<link rel="stylesheet" href="/++resource++vindula.controlpanel/alert_style.css" />
+	</head>
+    <body style="background:none; ">
+		<div id="content" style="text-align:center;">         
+			<h1>Excluir imagem do seu perfil</h1>
+			<form name="exclud-user" method="post" enctype="multipart/form-data"
+				  tal:attributes="action string:${context/absolute_url|nothing}/myvindula-user-delcrop"
+				  tal:define="member context/@@plone_portal_state/member">
+				
+				<p>Tem certeza que deseja excluir a imagem do perfil?</p>
+				<div id="buttom">
+					<input type="hidden" name="form.excluir:boolean" value="True" />
+					<input type="hidden" id="username" name="username" value="" 
+								    tal:attributes="value member/getUserName|nothing">
+					<input type="submit" name="submit" value="Excluir" class="context bt_comments" />
+				</div>
+				<div id="del-susseco" tal:condition="request/form.excluir|nothing">
+					<script type="text/javascript">
+						$j = jQuery.noConflict();
+						
+						$j(document).ready(function(){
+							$j('div.close', window.parent.document).trigger('click');
+							window.parent.RemoveFoto();
+						});
+						
+						
+					</script>	
+				</div>
+				
+			</form>
+    	</div>
+	</body>
+</html>
