@@ -30,3 +30,5 @@ Changelog
 1.1.5 - 2012-05-24
 -----------------
 - Ajustes no mecanismo para cortar a imagem para imagens grandes
+- Adição do SQl da tabela vin_myvindula_photo_user
+- Adição do mecanismo de Excluir a imagem do Usuario
